[project]
name = "llmcostcalc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "google-cloud-aiplatform[tokenization]>=1.89.0",
    "google-genai>=1.11.0",
    "ipykernel>=6.29.5",
    "ipython>=9.1.0",
    "pandas>=2.2.3",
    "pydantic>=2.11.3",
    "requests>=2.32.3",
    "streamlit>=1.44.1",
    "tiktoken>=0.9.0",
    "watchdog>=6.0.0",
]
